--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="admin-routes.css">
     <link rel="stylesheet" href="notification.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -43,6 +44,10 @@
                 <a href="#" class="sidebar-item" data-section="bookings">
                     <i class="fas fa-calendar-check"></i>
                     <span>Rezervacije</span>
+                </a>
+                <a href="#" class="sidebar-item" data-section="routes">
+                    <i class="fas fa-map-marked-alt"></i>
+                    <span>Mapa Ruta</span>
                 </a>
                 <a href="#" class="sidebar-item" data-section="users">
                     <i class="fas fa-users"></i>
@@ -158,6 +163,25 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+            </section>
+
+            <!-- Routes Map Section -->
+            <section id="routes" class="content-section">
+                <div class="section-header">
+                    <h1>Mapa Ruta</h1>
+                    <div class="filter-controls">
+                        <select id="routeStatusFilter" class="filter-select">
+                            <option value="all">Sve Rute</option>
+                            <option value="pending">Na Čekanju</option>
+                            <option value="confirmed">Potvrđeno</option>
+                            <option value="completed">Završeno</option>
+                        </select>
+                    </div>
+                </div>
+                <div id="routesMap" style="width: 100%; height: 600px; border-radius: 10px; margin-top: 20px;"></div>
+                <div id="routesList" class="routes-list" style="margin-top: 20px;">
+                    <!-- Route cards will be populated here -->
                 </div>
             </section>
 
@@ -330,8 +354,35 @@
         </div>
     </div>
 
+    <!-- User Details Modal -->
+    <div id="userModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeUserModal()">&times;</span>
+            <h2>Detalji Korisnika</h2>
+            <div id="userDetails" class="user-details-full">
+                <!-- Details will be populated by JavaScript -->
+            </div>
+        </div>
+    </div>
+
     <script src="notification.js"></script>
     <script type="module" src="firebase-config.js"></script>
     <script type="module" src="admin.js"></script>
+    <script>
+        // Load Google Maps API for route visualization
+        function loadGoogleMapsAdmin() {
+            const script = document.createElement('script');
+            script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyB8CHUX3tIvS0uk1d-_cOhfhrtbUp_qZhs&libraries=places&callback=initAdminMap&loading=async';
+            script.async = true;
+            script.defer = true;
+            document.head.appendChild(script);
+        }
+        
+        if (document.readyState === 'loading') {
+            document.addEventListener('DOMContentLoaded', loadGoogleMapsAdmin);
+        } else {
+            loadGoogleMapsAdmin();
+        }
+    </script>
 </body>
 </html>
