Add Google Maps script to admin.html to fix map not showing

--- a/admin.html
+++ b/admin.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="admin-routes.css">
     <link rel="stylesheet" href="notification.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4B4h8Q4qJ5rF3g2h3I7j6k5l4m3n2o1p&callback=initAdminMap&libraries=places"></script>
 </head>
 <body>
     <nav class="navbar">
