--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="contact-card">
                     <i class="fas fa-envelope"></i>
                     <h3 data-translate="contact_email">Email</h3>
-                    <p>info@ldcalusic.hr</p>
+                    <p>ldcalusicprijevoziusluge@gmail.com</p>
                 </div>
             </div>
         </div>
