--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <div class="footer-section">
                     <h4 data-translate="footer_follow">Pratite nas</h4>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61586803831889"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                     </div>
