--- a/index.html
+++ b/index.html
@@ -287,8 +287,7 @@
                     <h4 data-translate="footer_follow">Pratite nas</h4>
                     <div class="social-links">
                         <a href="https://www.facebook.com/profile.php?id=61586803831889"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <!-- <a href="#"><i class="fab fa-instagram"></i></a> -->
                     </div>
                 </div>
             </div>
